[package]
name = "pmtree"
version = "0.1.0"
edition = "2021"

[features]
batch_insert = []

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sled = "0.34.7"
rln = { git = "https://github.com/vacp2p/zerokit", rev = "490206a" }
ark-serialize = "0.3.0"