[package]
name = "pmtree"
version = "1.0.0"
edition = "2021"
description = "Generic for storage Merkle Tree (sparse & fixed-size) in Rust"
repository = "https://github.com/Rate-Limiting-Nullifier/pmtree"
license = "MIT OR Apache-2.0"

[dev-dependencies]
hex-literal = "=0.3.4"
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
sled = "=0.34.7"
ark-serialize = "=0.3.0"

[dependencies]
rayon = { version = "=1.7.0", optional =  false }